<resources>
    <string name="app_name">Raiffeisen ThinkThank</string>
    <string name="register">Don\'t have an account? <b>SIGNUP</b></string>
    <string name="reset">RESET PASSWORD</string>
    <string name="tv_register_title">Create account</string>
    <string name="tv_register_email">What\'s your email?</string>
    <string name="tv_register_password">Create a password</string>
    <string name="tv_register_gender">What\'s your gender?</string>
    <string name="tv_register_name">What\'s your name?</string>
    <string name="btn_create_account">Create an account</string>
    <string name="remember_me">Remember me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_continue">Login to continue.</string>
    <string name="reset_your_password">Reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sold">Sold</string>
    <string name="_100lei">100lei</string>
    <string name="adauga_o_categorie">Adauga o categorie</string>
    <string name="nume">Nume</string>
    <string name="buget">Buget</string>
    <string name="adauga">Adauga</string>
</resources>